Align main body vertically on smaller window sizes #205 solved

--- a/src/renderer/styles/tailwind.css
+++ b/src/renderer/styles/tailwind.css
@@ -118,3 +118,8 @@
     font-feature-settings: "rlig" 1, "calt" 1;
   }
 }
+
+
+::-webkit-scrollbar{
+  display: none;
+}
